# folio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SKILL.md
.forgejo/workflows/: docker.yml  rust.yml
.gitea/workflows/: docker.yml  rust.yml
data/: expiry-index.json
forgejo/workflows/: docker.yml  rust.yml
src/: auth.rs  config.rs  error.rs  expiry.rs  files.rs  main.rs  path.rs  private_index.rs  store.rs  test_utils.rs  uploads.rs  workflow.rs
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.svelte  App.tsx  app.css  app.html
web/src/components/: DownloadLink.svelte  FileUploadZone.svelte
web/src/components/ui/: button.tsx
web/src/lib/components/: DownloadLink.svelte  FileUploadZone.svelte
web/src/lib/components/ui/button/: Button.svelte
web/src/lib/components/ui/card/: Card.svelte  CardContent.svelte  CardHeader.svelte  CardTitle.svelte  index.ts
web/src/lib/components/ui/input/: Input.svelte
web/src/lib/components/ui/label/: Label.svelte
web/src/routes/: +page.svelte
