[package]
name = "folio"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
log = "0.4.28"
pretty_env_logger = "0.5.0"
rocket = { version = "0.5.1", features = ["json"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = "1.0.228"
serde_json = "1.0.145"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.23.0"
