[package]
name = "folio"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
log = "0.4.28"
pretty_env_logger = "0.5.0"
actix-files = "0.6.10"
actix-multipart = "0.8.0"
actix-web = "4.14.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures-util = "0.3.31"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3.23.0"
