[package]
name = "folio"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
log = "0.4.33"
pretty_env_logger = "0.5.0"
actix-files = "0.6.10"
actix-multipart = "0.8.0"
actix-web = "4.14.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures-util = "0.3.32"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3.27.0"
